# swagger.json
@@ -137,7 +137,7 @@
 				]
 			}
 		},
-		"/users/{id}": {
+		"/users/{uid}": {
 			"put": {
 				"operationId": "Atualizar",
 				"produces": [
@@ -160,7 +160,7 @@
 				"parameters": [
 					{
 						"in": "path",
-						"name": "id",
+						"name": "uid",
 						"required": true,
 						"type": "string"
 					}
@@ -188,7 +188,7 @@
 				"parameters": [
 					{
 						"in": "path",
-						"name": "id",
+						"name": "uid",
 						"required": true,
 						"type": "string"
 					}
@@ -215,7 +215,7 @@
 				"parameters": [
 					{
 						"in": "path",
-						"name": "id",
+						"name": "uid",
 						"required": true,
 						"type": "string"
 					}
